--- a/result/2022-01-16.md
+++ b/result/2022-01-16.md
@@ -6,36 +6,38 @@
 6. [北京新增确诊为奥密克戎](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E6%96%B0%E5%A2%9E%E7%A1%AE%E8%AF%8A%E4%B8%BA%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%23&Refer=top) 799366
 7. [广州天河排除一起核酸检测结果异常](https://s.weibo.com//weibo?q=%23%E5%B9%BF%E5%B7%9E%E5%A4%A9%E6%B2%B3%E6%8E%92%E9%99%A4%E4%B8%80%E8%B5%B7%E6%A0%B8%E9%85%B8%E6%A3%80%E6%B5%8B%E7%BB%93%E6%9E%9C%E5%BC%82%E5%B8%B8%23&Refer=top) 611545
 8. [正佳广场](https://s.weibo.com//weibo?q=%23%E6%AD%A3%E4%BD%B3%E5%B9%BF%E5%9C%BA%23&Refer=top) 596600
-9. [上海为什么有底气划20平米风险区](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E4%B8%BA%E4%BB%80%E4%B9%88%E6%9C%89%E5%BA%95%E6%B0%94%E5%88%9220%E5%B9%B3%E7%B1%B3%E9%A3%8E%E9%99%A9%E5%8C%BA%23&Refer=top) 556128
+9. [上海为什么有底气划20平米风险区](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E4%B8%BA%E4%BB%80%E4%B9%88%E6%9C%89%E5%BA%95%E6%B0%94%E5%88%9220%E5%B9%B3%E7%B1%B3%E9%A3%8E%E9%99%A9%E5%8C%BA%23&Refer=top) 580879
 10. [女子1100元假币骗残疾老人半扇猪肉](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%901100%E5%85%83%E5%81%87%E5%B8%81%E9%AA%97%E6%AE%8B%E7%96%BE%E8%80%81%E4%BA%BA%E5%8D%8A%E6%89%87%E7%8C%AA%E8%82%89%23&Refer=top) 545609
 11. [00后服务员买70杯热饮送医护](https://s.weibo.com//weibo?q=%2300%E5%90%8E%E6%9C%8D%E5%8A%A1%E5%91%98%E4%B9%B070%E6%9D%AF%E7%83%AD%E9%A5%AE%E9%80%81%E5%8C%BB%E6%8A%A4%23&Refer=top) 521467
 12. [卵巢功能衰退会增加早死风险](https://s.weibo.com//weibo?q=%23%E5%8D%B5%E5%B7%A2%E5%8A%9F%E8%83%BD%E8%A1%B0%E9%80%80%E4%BC%9A%E5%A2%9E%E5%8A%A0%E6%97%A9%E6%AD%BB%E9%A3%8E%E9%99%A9%23&Refer=top) 478161
 13. [5岁女孩疑被后妈烫伤爷爷发声](https://s.weibo.com//weibo?q=%235%E5%B2%81%E5%A5%B3%E5%AD%A9%E7%96%91%E8%A2%AB%E5%90%8E%E5%A6%88%E7%83%AB%E4%BC%A4%E7%88%B7%E7%88%B7%E5%8F%91%E5%A3%B0%23&Refer=top) 472659
 14. [广州天河城开启核酸检测](https://s.weibo.com//weibo?q=%23%E5%B9%BF%E5%B7%9E%E5%A4%A9%E6%B2%B3%E5%9F%8E%E5%BC%80%E5%90%AF%E6%A0%B8%E9%85%B8%E6%A3%80%E6%B5%8B%23&Refer=top) 440829
 15. [斥资20万请主播带货仅卖出456元](https://s.weibo.com//weibo?q=%23%E6%96%A5%E8%B5%8420%E4%B8%87%E8%AF%B7%E4%B8%BB%E6%92%AD%E5%B8%A6%E8%B4%A7%E4%BB%85%E5%8D%96%E5%87%BA456%E5%85%83%23&Refer=top) 439364
-16. [深圳1月15日暂无新增病例](https://s.weibo.com//weibo?q=%E6%B7%B1%E5%9C%B31%E6%9C%8815%E6%97%A5%E6%9A%82%E6%97%A0%E6%96%B0%E5%A2%9E%E7%97%85%E4%BE%8B&Refer=top) 335884
-17. [黑龙江一市民路遇国家二级保护动物灰林鸮](https://s.weibo.com//weibo?q=%23%E9%BB%91%E9%BE%99%E6%B1%9F%E4%B8%80%E5%B8%82%E6%B0%91%E8%B7%AF%E9%81%87%E5%9B%BD%E5%AE%B6%E4%BA%8C%E7%BA%A7%E4%BF%9D%E6%8A%A4%E5%8A%A8%E7%89%A9%E7%81%B0%E6%9E%97%E9%B8%AE%23&Refer=top) 311365
-18. [奥密克戎正迅速取代其它变异株](https://s.weibo.com//weibo?q=%23%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%E6%AD%A3%E8%BF%85%E9%80%9F%E5%8F%96%E4%BB%A3%E5%85%B6%E5%AE%83%E5%8F%98%E5%BC%82%E6%A0%AA%23&Refer=top) 305638
-19. [日本海啸](https://s.weibo.com//weibo?q=%E6%97%A5%E6%9C%AC%E6%B5%B7%E5%95%B8&Refer=top) 303151
-20. [烤牛奶竟然能变成奶茶](https://s.weibo.com//weibo?q=%23%E7%83%A4%E7%89%9B%E5%A5%B6%E7%AB%9F%E7%84%B6%E8%83%BD%E5%8F%98%E6%88%90%E5%A5%B6%E8%8C%B6%23&Refer=top) 279680
-21. [压力大的确会长白头发](https://s.weibo.com//weibo?q=%23%E5%8E%8B%E5%8A%9B%E5%A4%A7%E7%9A%84%E7%A1%AE%E4%BC%9A%E9%95%BF%E7%99%BD%E5%A4%B4%E5%8F%91%23&Refer=top) 276667
-22. [韩籍邻居送物资西安小伙回赠韩国拌饭](https://s.weibo.com//weibo?q=%23%E9%9F%A9%E7%B1%8D%E9%82%BB%E5%B1%85%E9%80%81%E7%89%A9%E8%B5%84%E8%A5%BF%E5%AE%89%E5%B0%8F%E4%BC%99%E5%9B%9E%E8%B5%A0%E9%9F%A9%E5%9B%BD%E6%8B%8C%E9%A5%AD%23&Refer=top) 245555
-23. [哪一刻你感觉到了人间值得](https://s.weibo.com//weibo?q=%23%E5%93%AA%E4%B8%80%E5%88%BB%E4%BD%A0%E6%84%9F%E8%A7%89%E5%88%B0%E4%BA%86%E4%BA%BA%E9%97%B4%E5%80%BC%E5%BE%97%23&Refer=top) 244395
-24. [春节有效穿搭](https://s.weibo.com//weibo?q=%23%E6%98%A5%E8%8A%82%E6%9C%89%E6%95%88%E7%A9%BF%E6%90%AD%23&Refer=top) 242959
-25. [但凡正常点都脱单了](https://s.weibo.com//weibo?q=%23%E4%BD%86%E5%87%A1%E6%AD%A3%E5%B8%B8%E7%82%B9%E9%83%BD%E8%84%B1%E5%8D%95%E4%BA%86%23&Refer=top) 235314
-26. [妈妈外出1小时爸爸哄娃崩溃大哭](https://s.weibo.com//weibo?q=%23%E5%A6%88%E5%A6%88%E5%A4%96%E5%87%BA1%E5%B0%8F%E6%97%B6%E7%88%B8%E7%88%B8%E5%93%84%E5%A8%83%E5%B4%A9%E6%BA%83%E5%A4%A7%E5%93%AD%23&Refer=top) 204590
-27. [天津迎战奥密克戎](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E8%BF%8E%E6%88%98%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%23&Refer=top) 204514
-28. [广州市第十二人民医院停诊](https://s.weibo.com//weibo?q=%23%E5%B9%BF%E5%B7%9E%E5%B8%82%E7%AC%AC%E5%8D%81%E4%BA%8C%E4%BA%BA%E6%B0%91%E5%8C%BB%E9%99%A2%E5%81%9C%E8%AF%8A%23&Refer=top) 203021
-29. [贵州4岁女孩疑被后妈殴打烫伤](https://s.weibo.com//weibo?q=%23%E8%B4%B5%E5%B7%9E4%E5%B2%81%E5%A5%B3%E5%AD%A9%E7%96%91%E8%A2%AB%E5%90%8E%E5%A6%88%E6%AE%B4%E6%89%93%E7%83%AB%E4%BC%A4%23&Refer=top) 196453
-30. [公交司机停车救火后向乘客鞠躬致歉](https://s.weibo.com//weibo?q=%23%E5%85%AC%E4%BA%A4%E5%8F%B8%E6%9C%BA%E5%81%9C%E8%BD%A6%E6%95%91%E7%81%AB%E5%90%8E%E5%90%91%E4%B9%98%E5%AE%A2%E9%9E%A0%E8%BA%AC%E8%87%B4%E6%AD%89%23&Refer=top) 187975
-31. [因封城无法归家的西安女孩被山东舍友接回威海](https://s.weibo.com//weibo?q=%23%E5%9B%A0%E5%B0%81%E5%9F%8E%E6%97%A0%E6%B3%95%E5%BD%92%E5%AE%B6%E7%9A%84%E8%A5%BF%E5%AE%89%E5%A5%B3%E5%AD%A9%E8%A2%AB%E5%B1%B1%E4%B8%9C%E8%88%8D%E5%8F%8B%E6%8E%A5%E5%9B%9E%E5%A8%81%E6%B5%B7%23&Refer=top) 181754
-32. [京昆高速成绵主线发生火灾](https://s.weibo.com//weibo?q=%23%E4%BA%AC%E6%98%86%E9%AB%98%E9%80%9F%E6%88%90%E7%BB%B5%E4%B8%BB%E7%BA%BF%E5%8F%91%E7%94%9F%E7%81%AB%E7%81%BE%23&Refer=top) 162211
-33. [成绵高速](https://s.weibo.com//weibo?q=%E6%88%90%E7%BB%B5%E9%AB%98%E9%80%9F&Refer=top) 160967
-34. [踩着门禁点回家的小猫咪](https://s.weibo.com//weibo?q=%23%E8%B8%A9%E7%9D%80%E9%97%A8%E7%A6%81%E7%82%B9%E5%9B%9E%E5%AE%B6%E7%9A%84%E5%B0%8F%E7%8C%AB%E5%92%AA%23&Refer=top) 159038
-35. [北京人算是把碳水吃明白了](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E4%BA%BA%E7%AE%97%E6%98%AF%E6%8A%8A%E7%A2%B3%E6%B0%B4%E5%90%83%E6%98%8E%E7%99%BD%E4%BA%86%23&Refer=top) 144838
-36. [英雄联盟](https://s.weibo.com//weibo?q=%E8%8B%B1%E9%9B%84%E8%81%94%E7%9B%9F&Refer=top) 143411
-37. [LNG战胜RA](https://s.weibo.com//weibo?q=%23LNG%E6%88%98%E8%83%9CRA%23&Refer=top) 124035
-38. [TTG](https://s.weibo.com//weibo?q=TTG&Refer=top) 123912
-39. [TTG一年三亚](https://s.weibo.com//weibo?q=%23TTG%E4%B8%80%E5%B9%B4%E4%B8%89%E4%BA%9A%23&Refer=top) 123589
-40. [王立科送给孙力军9000多万小海鲜](https://s.weibo.com//weibo?q=%23%E7%8E%8B%E7%AB%8B%E7%A7%91%E9%80%81%E7%BB%99%E5%AD%99%E5%8A%9B%E5%86%9B9000%E5%A4%9A%E4%B8%87%E5%B0%8F%E6%B5%B7%E9%B2%9C%23&Refer=top) 113520
-41. [曼联2比2维拉](https://s.weibo.com//weibo?q=%23%E6%9B%BC%E8%81%942%E6%AF%942%E7%BB%B4%E6%8B%89%23&Refer=top) 66701
+16. [日本海啸](https://s.weibo.com//weibo?q=%E6%97%A5%E6%9C%AC%E6%B5%B7%E5%95%B8&Refer=top) 414912
+17. [深圳1月15日暂无新增病例](https://s.weibo.com//weibo?q=%E6%B7%B1%E5%9C%B31%E6%9C%8815%E6%97%A5%E6%9A%82%E6%97%A0%E6%96%B0%E5%A2%9E%E7%97%85%E4%BE%8B&Refer=top) 335884
+18. [黑龙江一市民路遇国家二级保护动物灰林鸮](https://s.weibo.com//weibo?q=%23%E9%BB%91%E9%BE%99%E6%B1%9F%E4%B8%80%E5%B8%82%E6%B0%91%E8%B7%AF%E9%81%87%E5%9B%BD%E5%AE%B6%E4%BA%8C%E7%BA%A7%E4%BF%9D%E6%8A%A4%E5%8A%A8%E7%89%A9%E7%81%B0%E6%9E%97%E9%B8%AE%23&Refer=top) 311408
+19. [奥密克戎正迅速取代其它变异株](https://s.weibo.com//weibo?q=%23%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%E6%AD%A3%E8%BF%85%E9%80%9F%E5%8F%96%E4%BB%A3%E5%85%B6%E5%AE%83%E5%8F%98%E5%BC%82%E6%A0%AA%23&Refer=top) 305638
+20. [成绵高速](https://s.weibo.com//weibo?q=%E6%88%90%E7%BB%B5%E9%AB%98%E9%80%9F&Refer=top) 297091
+21. [烤牛奶竟然能变成奶茶](https://s.weibo.com//weibo?q=%23%E7%83%A4%E7%89%9B%E5%A5%B6%E7%AB%9F%E7%84%B6%E8%83%BD%E5%8F%98%E6%88%90%E5%A5%B6%E8%8C%B6%23&Refer=top) 279680
+22. [压力大的确会长白头发](https://s.weibo.com//weibo?q=%23%E5%8E%8B%E5%8A%9B%E5%A4%A7%E7%9A%84%E7%A1%AE%E4%BC%9A%E9%95%BF%E7%99%BD%E5%A4%B4%E5%8F%91%23&Refer=top) 276667
+23. [韩籍邻居送物资西安小伙回赠韩国拌饭](https://s.weibo.com//weibo?q=%23%E9%9F%A9%E7%B1%8D%E9%82%BB%E5%B1%85%E9%80%81%E7%89%A9%E8%B5%84%E8%A5%BF%E5%AE%89%E5%B0%8F%E4%BC%99%E5%9B%9E%E8%B5%A0%E9%9F%A9%E5%9B%BD%E6%8B%8C%E9%A5%AD%23&Refer=top) 245555
+24. [哪一刻你感觉到了人间值得](https://s.weibo.com//weibo?q=%23%E5%93%AA%E4%B8%80%E5%88%BB%E4%BD%A0%E6%84%9F%E8%A7%89%E5%88%B0%E4%BA%86%E4%BA%BA%E9%97%B4%E5%80%BC%E5%BE%97%23&Refer=top) 244395
+25. [春节有效穿搭](https://s.weibo.com//weibo?q=%23%E6%98%A5%E8%8A%82%E6%9C%89%E6%95%88%E7%A9%BF%E6%90%AD%23&Refer=top) 242959
+26. [但凡正常点都脱单了](https://s.weibo.com//weibo?q=%23%E4%BD%86%E5%87%A1%E6%AD%A3%E5%B8%B8%E7%82%B9%E9%83%BD%E8%84%B1%E5%8D%95%E4%BA%86%23&Refer=top) 235314
+27. [英雄联盟](https://s.weibo.com//weibo?q=%E8%8B%B1%E9%9B%84%E8%81%94%E7%9B%9F&Refer=top) 235003
+28. [因封城无法归家的西安女孩被山东舍友接回威海](https://s.weibo.com//weibo?q=%23%E5%9B%A0%E5%B0%81%E5%9F%8E%E6%97%A0%E6%B3%95%E5%BD%92%E5%AE%B6%E7%9A%84%E8%A5%BF%E5%AE%89%E5%A5%B3%E5%AD%A9%E8%A2%AB%E5%B1%B1%E4%B8%9C%E8%88%8D%E5%8F%8B%E6%8E%A5%E5%9B%9E%E5%A8%81%E6%B5%B7%23&Refer=top) 206885
+29. [妈妈外出1小时爸爸哄娃崩溃大哭](https://s.weibo.com//weibo?q=%23%E5%A6%88%E5%A6%88%E5%A4%96%E5%87%BA1%E5%B0%8F%E6%97%B6%E7%88%B8%E7%88%B8%E5%93%84%E5%A8%83%E5%B4%A9%E6%BA%83%E5%A4%A7%E5%93%AD%23&Refer=top) 204590
+30. [天津迎战奥密克戎](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E8%BF%8E%E6%88%98%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%23&Refer=top) 204514
+31. [广州市第十二人民医院停诊](https://s.weibo.com//weibo?q=%23%E5%B9%BF%E5%B7%9E%E5%B8%82%E7%AC%AC%E5%8D%81%E4%BA%8C%E4%BA%BA%E6%B0%91%E5%8C%BB%E9%99%A2%E5%81%9C%E8%AF%8A%23&Refer=top) 203021
+32. [贵州4岁女孩疑被后妈殴打烫伤](https://s.weibo.com//weibo?q=%23%E8%B4%B5%E5%B7%9E4%E5%B2%81%E5%A5%B3%E5%AD%A9%E7%96%91%E8%A2%AB%E5%90%8E%E5%A6%88%E6%AE%B4%E6%89%93%E7%83%AB%E4%BC%A4%23&Refer=top) 196453
+33. [公交司机停车救火后向乘客鞠躬致歉](https://s.weibo.com//weibo?q=%23%E5%85%AC%E4%BA%A4%E5%8F%B8%E6%9C%BA%E5%81%9C%E8%BD%A6%E6%95%91%E7%81%AB%E5%90%8E%E5%90%91%E4%B9%98%E5%AE%A2%E9%9E%A0%E8%BA%AC%E8%87%B4%E6%AD%89%23&Refer=top) 187975
+34. [京昆高速成绵主线发生火灾](https://s.weibo.com//weibo?q=%23%E4%BA%AC%E6%98%86%E9%AB%98%E9%80%9F%E6%88%90%E7%BB%B5%E4%B8%BB%E7%BA%BF%E5%8F%91%E7%94%9F%E7%81%AB%E7%81%BE%23&Refer=top) 162211
+35. [踩着门禁点回家的小猫咪](https://s.weibo.com//weibo?q=%23%E8%B8%A9%E7%9D%80%E9%97%A8%E7%A6%81%E7%82%B9%E5%9B%9E%E5%AE%B6%E7%9A%84%E5%B0%8F%E7%8C%AB%E5%92%AA%23&Refer=top) 159038
+36. [北京人算是把碳水吃明白了](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E4%BA%BA%E7%AE%97%E6%98%AF%E6%8A%8A%E7%A2%B3%E6%B0%B4%E5%90%83%E6%98%8E%E7%99%BD%E4%BA%86%23&Refer=top) 144838
+37. [王立科送给孙力军9000多万小海鲜](https://s.weibo.com//weibo?q=%23%E7%8E%8B%E7%AB%8B%E7%A7%91%E9%80%81%E7%BB%99%E5%AD%99%E5%8A%9B%E5%86%9B9000%E5%A4%9A%E4%B8%87%E5%B0%8F%E6%B5%B7%E9%B2%9C%23&Refer=top) 126033
+38. [LNG战胜RA](https://s.weibo.com//weibo?q=%23LNG%E6%88%98%E8%83%9CRA%23&Refer=top) 124035
+39. [TTG](https://s.weibo.com//weibo?q=TTG&Refer=top) 123912
+40. [TTG一年三亚](https://s.weibo.com//weibo?q=%23TTG%E4%B8%80%E5%B9%B4%E4%B8%89%E4%BA%9A%23&Refer=top) 123589
+41. [体现教养的18个细节](https://s.weibo.com//weibo?q=%23%E4%BD%93%E7%8E%B0%E6%95%99%E5%85%BB%E7%9A%8418%E4%B8%AA%E7%BB%86%E8%8A%82%23&Refer=top) 77471
+42. [2022年春运全国发送旅客预计达11.8亿人次](https://s.weibo.com//weibo?q=%232022%E5%B9%B4%E6%98%A5%E8%BF%90%E5%85%A8%E5%9B%BD%E5%8F%91%E9%80%81%E6%97%85%E5%AE%A2%E9%A2%84%E8%AE%A1%E8%BE%BE11.8%E4%BA%BF%E4%BA%BA%E6%AC%A1%23&Refer=top) 73622
+43. [曼联2比2维拉](https://s.weibo.com//weibo?q=%23%E6%9B%BC%E8%81%942%E6%AF%942%E7%BB%B4%E6%8B%89%23&Refer=top) 66701
